2006-10-30  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: added ability to sync between test cases
	* tests/testsuite-ip.at: added ability to sync between test cases
	* tests/testsuite-np_ip.at: added ability to sync between test cases

	* acinclude.m4: remove checks for compile.h and utsrelease (in compat.h)

2006-10-27  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: change linux/config.h to autoconf.h for 2.6.18

2006-10-21  Brian Bidulock  <bidulock@openss7.org>

	* strxns.lsm.in: updated streams release number
	* debian/control.in: updated streams release number
	* doc/man/strxns.refs: updated streams release number
	* doc/manual/releases.texi: updated streams release number
	* debian/control.in: updated LiS release number
	* doc/manual/releases.texi: updated LiS release number

2006-10-12  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: removed redundant debug flags
	* src/drivers/np_ip.c: remove redundant debug flags

2006-10-10  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* doc/man/strxns.refs: updates for release
	* doc/man/man4/ip_strm_mod.4.man: updates for release
	* doc/man/man4/ip_to_dlpi.4.man: updates for release
	* doc/man/man4/ldl.4.man: updates for release
	* doc/man/man7/CD_READ_REQ.7.man: updates for release
	* doc/man/man7/CD_WRITE_READ_REQ.7.man: updates for release
	* doc/man/man7/DL_ATTACH_REQ.7.man: updates for release
	* doc/man/man7/DL_BIND_ACK.7.man: updates for release
	* doc/man/man7/DL_CONNECT_CON.7.man: updates for release
	* doc/man/man7/DL_CONNECT_IND.7.man: updates for release
	* doc/man/man7/DL_CONNECT_REQ.7.man: updates for release
	* doc/man/man8/ldlconfig.8.man: updates for release
	* doc/man/man8/ldltest.8.man: updates for release
	* doc/manual/descrip.texi: updates for release

2006-10-06  Brian Bidulock  <bidulock@openss7.org>
